  * Added log levels warning, error and critical. (issue #1)
  * Only compare MAJOR and MINOR for a valid SiriDB version. (issue #2)